[IMP] - Homepage Update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,53 @@
 
   <!-- Header -->
   <div class="header">
-    <div class="container"></div>
+    <div class="container">
+      <!-- Logo -->
+      <div class="header-logo">
+        <a href="#"><img class="lazy" data-src="img/global/logo-alt.png" alt="afconev-img"></a>
+      </div>
+      <!-- Links -->
+      <div class="header-links d-desktop">
+        <ul class="f-d-20 medium">
+          <!-- Item -->
+          <li><a href="#" class="link link-white">פתרונות טעינה <img class="lazy" data-src="img/icons/chevron-down-white.svg" alt="afconev-img"></a></li>
+          <!-- Item -->
+          <li><a href="#" class="link link-white">פתרונות לעסקים</a></li>
+          <!-- Item -->
+          <li><a href="#" class="link link-white">איתור עמדה</a></li>
+          <!-- Item -->
+          <li><a href="#" class="link link-white">אודות</a></li>
+          <!-- Item -->
+          <li><a href="#" class="link link-white">למה אנחנו</a></li>
+          <!-- Item -->
+          <li><a href="#" class="link link-white">מגזין</a></li>
+          <!-- Item -->
+          <li><a href="#" class="link link-white">צור קשר</a></li>
+        </ul>
+      </div>
+      <!-- Action -->
+      <div class="header-action">
+        <!-- Hamburger -->
+        <div class="header-hamburger d-mobile">
+          <a href="#"><img class="lazy" data-src="img/icons/hamburger.svg" alt="afconev-img"></a>
+        </div>
+        <!-- Search -->
+        <div class="header-search d-desktop">
+          <a href="#"><img class="lazy" data-src="img/icons/search.svg" alt="afconev-img"></a>
+        </div>
+        <!-- Cart -->
+        <div class="header-cart">
+          <a href="#"><img class="lazy" data-src="img/icons/cart.svg" alt="afconev-img"></a>
+        </div>
+        <!-- Whatsapp -->
+        <div class="header-whatsapp">
+          <a href="#" class="f-d-20 f-m-30">
+            *2108
+            <img class="lazy" data-src="img/icons/wa.svg" alt="afconev-img">
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Home Banner -->
@@ -77,12 +123,22 @@
 
   <!-- Station Locations -->
   <div class="station-locations">
-    <div class="container"></div>
+    <div class="container">
+      <!-- Text -->
+      <div class="text"></div>
+      <!-- Map -->
+      <div class="map">
+        <div id="map"></div>
+        <div class="map-fade"></div>
+      </div>
+    </div>
   </div>
 
   <!-- Product Slider -->
   <div class="product-slider">
-    <div class="container"></div>
+    <div class="container">
+      <h2 class="f-d-50 f-m-70 medium">המוצרים שלנו</h2>
+    </div>
   </div>
 
   <!-- Benefits -->
@@ -180,7 +236,9 @@
 
   <!-- Customer Testimonials -->
   <div class="customer-testimonials">
-    <div class="container"></div>
+    <div class="container">
+
+    </div>
   </div>
 
   <!-- Post Slider -->
@@ -399,7 +457,16 @@
   </div>
 
   <!-- Static Btn -->
-  <div class="static-btn"></div>
+  <div class="static-btn">
+    <a href="#">
+      <div class="img">
+        <img class="lazy" data-src="img/global/static-btn.svg" alt="afconev-img">
+      </div>
+      <div class="text">
+        <p class="f-d-18 f-m-24 medium">התחל טעינה</p>
+      </div>
+    </a>
+  </div>
 
   <!-- Script (Vendor) -->
   <script src="js/swiper-bundle.min.js"></script>
