--- a/404.html
+++ b/404.html
@@ -23,17 +23,94 @@
 <body class="error-page">
 
   <!-- Header -->
-  <div class="header">
+  <div class="header header-always-white">
     <div class="container">
       <!-- Logo -->
       <div class="header-logo">
-        <a href="#"><img class="lazy" data-src="img/global/logo-alt.png" alt="afconev-img"></a>
+        <a href="#">
+          <img class="lazy icon-white" data-src="img/global/logo-alt.png" alt="afconev-img">
+          <img class="lazy icon-black" data-src="img/global/logo-alt-black.png" alt="afconev-img">
+        </a>
       </div>
       <!-- Links -->
-      <div class="header-links d-desktop">
-        <ul class="f-d-20 medium">
+      <div class="header-links">
+        <div class="header-search-form d-mobile">
+          <a href="#" class="link link-white f-m-32 medium">
+            <img src="img/icons/search-black.svg" alt="afconev-img">
+            חיפוש
+          </a>
+        </div>
+        <ul class="f-d-20 f-m-32 medium">
           <!-- Item -->
-          <li><a href="#" class="link link-white">פתרונות טעינה <img class="lazy" data-src="img/icons/chevron-down-white.svg" alt="afconev-img"></a></li>
+          <li>
+            <!-- Accordion -->
+            <div class="accordion">
+              <!-- Collapsible -->
+              <div class="collapsible">
+                <!-- Toggler -->
+                <div class="collapse-toggler">
+                  <a href="#" class="link link-white">פתרונות טעינה 
+                    <img class="lazy icon-white" data-src="img/icons/chevron-down-white.svg" alt="afconev-img">
+                    <img class="lazy icon-black" data-src="img/icons/chevron-down-black.svg" alt="afconev-img">
+                  </a>
+                </div>
+                <!-- Collapse -->
+                <div class="collapse">
+                  <div>
+                    <div class="icons">
+                      <!-- Icon -->
+                      <div class="icon">
+                        <div class="img">
+                          <img class="lazy" data-src="img/global/menu-icon-1.jpg" alt="afconev-img">
+                        </div>
+                        <p class="f-d-20 f-m-30">טסלה</p>
+                      </div>
+                      <!-- Icon -->
+                      <div class="icon">
+                        <div class="img">
+                          <img class="lazy" data-src="img/global/menu-icon-2.jpg" alt="afconev-img">
+                        </div>
+                        <p class="f-d-20 f-m-30">התקנה בבית 
+                          פרטי</p>
+                      </div>
+                      <!-- Icon -->
+                      <div class="icon">
+                        <div class="img">
+                          <img class="lazy" data-src="img/global/menu-icon-3.jpg" alt="afconev-img">
+                        </div>
+                        <p class="f-d-20 f-m-30">התקנה בבניין
+                          משותף</p>
+                      </div>
+                      <!-- Icon -->
+                      <div class="icon">
+                        <div class="img">
+                          <img class="lazy" data-src="img/global/menu-icon-4.jpg" alt="afconev-img">
+                        </div>
+                        <p class="f-d-20 f-m-30">מטענים</p>
+                      </div>
+                      <!-- Icon -->
+                      <div class="icon">
+                        <div class="img">
+                          <img class="lazy" data-src="img/global/menu-icon-5.jpg" alt="afconev-img">
+                        </div>
+                        <p class="f-d-20 f-m-30">אביזרים</p>
+                      </div>
+                    </div>
+                    <!-- Card -->
+                    <div class="card">
+                      <div class="text">
+                        <h3 class="f-d-25 f-m-45 medium">פתרונות ללקוחות עסקיים</h3>
+                        <a href="#" class="link link-white f-d-20 f-m-30 medium">פרטים נוספים <img class="lazy" data-src="img/icons/arrow-left-white.svg" alt="afconev-img"></a>
+                      </div>
+                      <div class="img">
+                        <img class="lazy" data-src="img/global/menu-card-img.jpg" alt="afconev-img">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
           <!-- Item -->
           <li><a href="#" class="link link-white">פתרונות לעסקים</a></li>
           <!-- Item -->
@@ -52,21 +129,31 @@
       <div class="header-action">
         <!-- Hamburger -->
         <div class="header-hamburger d-mobile">
-          <a href="#"><img class="lazy" data-src="img/icons/hamburger.svg" alt="afconev-img"></a>
+          <a href="#">
+            <img class="lazy icon-white" data-src="img/icons/hamburger.svg" alt="afconev-img">
+            <img class="lazy icon-black" data-src="img/icons/hamburger-black.svg" alt="afconev-img">
+          </a>
         </div>
         <!-- Search -->
         <div class="header-search d-desktop">
-          <a href="#"><img class="lazy" data-src="img/icons/search.svg" alt="afconev-img"></a>
+          <a href="#">
+            <img class="lazy icon-white" data-src="img/icons/search.svg" alt="afconev-img">
+            <img class="lazy icon-black" data-src="img/icons/search-black.svg" alt="afconev-img">
+          </a>
         </div>
         <!-- Cart -->
         <div class="header-cart">
-          <a href="#"><img class="lazy" data-src="img/icons/cart.svg" alt="afconev-img"></a>
+          <a href="#">
+            <img class="lazy icon-white" data-src="img/icons/cart.svg" alt="afconev-img">
+            <img class="lazy icon-black" data-src="img/icons/cart-black.svg" alt="afconev-img">
+          </a>
         </div>
         <!-- Whatsapp -->
         <div class="header-whatsapp">
           <a href="#" class="f-d-20 f-m-30">
             *2108
-            <img class="lazy" data-src="img/icons/wa.svg" alt="afconev-img">
+            <img class="lazy icon-white" data-src="img/icons/wa.svg" alt="afconev-img">
+            <img class="lazy icon-black" data-src="img/icons/wa-black.svg" alt="afconev-img">
           </a>
         </div>
       </div>
