[ADD] - FAQ Page

--- a/404.html
+++ b/404.html
@@ -61,14 +61,14 @@
                       <!-- Icon -->
                       <div class="icon">
                         <div class="img">
-                          <img class="lazy" data-src="img/global/menu-icon-1.jpg" alt="afconev-img">
+                          <img src="img/global/menu-icon-1.jpg" alt="afconev-img">
                         </div>
                         <p class="f-d-20 f-m-30">טסלה</p>
                       </div>
                       <!-- Icon -->
                       <div class="icon">
                         <div class="img">
-                          <img class="lazy" data-src="img/global/menu-icon-2.jpg" alt="afconev-img">
+                          <img src="img/global/menu-icon-2.jpg" alt="afconev-img">
                         </div>
                         <p class="f-d-20 f-m-30">התקנה בבית 
                           פרטי</p>
@@ -76,7 +76,7 @@
                       <!-- Icon -->
                       <div class="icon">
                         <div class="img">
-                          <img class="lazy" data-src="img/global/menu-icon-3.jpg" alt="afconev-img">
+                          <img src="img/global/menu-icon-3.jpg" alt="afconev-img">
                         </div>
                         <p class="f-d-20 f-m-30">התקנה בבניין
                           משותף</p>
@@ -84,14 +84,14 @@
                       <!-- Icon -->
                       <div class="icon">
                         <div class="img">
-                          <img class="lazy" data-src="img/global/menu-icon-4.jpg" alt="afconev-img">
+                          <img src="img/global/menu-icon-4.jpg" alt="afconev-img">
                         </div>
                         <p class="f-d-20 f-m-30">מטענים</p>
                       </div>
                       <!-- Icon -->
                       <div class="icon">
                         <div class="img">
-                          <img class="lazy" data-src="img/global/menu-icon-5.jpg" alt="afconev-img">
+                          <img src="img/global/menu-icon-5.jpg" alt="afconev-img">
                         </div>
                         <p class="f-d-20 f-m-30">אביזרים</p>
                       </div>
@@ -100,10 +100,10 @@
                     <div class="card">
                       <div class="text">
                         <h3 class="f-d-25 f-m-45 medium">פתרונות ללקוחות עסקיים</h3>
-                        <a href="#" class="link link-white f-d-20 f-m-30 medium">פרטים נוספים <img class="lazy" data-src="img/icons/arrow-left-white.svg" alt="afconev-img"></a>
+                        <a href="#" class="link link-white f-d-20 f-m-30 medium">פרטים נוספים <img src="img/icons/arrow-left-white.svg" alt="afconev-img"></a>
                       </div>
                       <div class="img">
-                        <img class="lazy" data-src="img/global/menu-card-img.jpg" alt="afconev-img">
+                        <img src="img/global/menu-card-img.jpg" alt="afconev-img">
                       </div>
                     </div>
                   </div>
