[ADD] - Business Customers (partial update)

--- a/business-customers.html
+++ b/business-customers.html
@@ -190,6 +190,312 @@
     </div>
   </div>
 
+  <!-- Post Slider -->
+  <div class="post-slider post-slider-1">
+    <div class="container">
+      <div class="heading">
+        <h2 class="f-d-50 f-m-70 medium">מגוון פתרונות לעסקים</h2>
+        <p class="f-d-22 f-m-30">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית קולורס מונפרד אדנדום</p>
+      </div>
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-60 f-m-50">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-60 f-m-50">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-60 f-m-50">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-60 f-m-50">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-60 f-m-50">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+      <div class="text-center">
+        <a href="#" class="btn btn-secondary"><span>לשיחה עם נציג</span></a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Why Us -->
+  <div class="why-us">
+    <div class="container">
+      <!-- Circle -->
+      <div class="circle pulse-animation">
+        <div class="text">
+          <h2 class="f-d-60 f-m-50 medium">לקוחות מרכזיים</h2>
+          <p class="f-d-22 f-m-30 d-desktop">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית נולום ארווס סאפיאן קוויס, אקווזמן קוואזי במר</p>
+          <p class="f-d-22 f-m-30 d-mobile">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג . </p>
+          <a href="#" class="link f-d-22 f-m-30 medium">לכל הלקוחות <img class="lazy" data-src="img/icons/arrow-left.svg" alt="afconev-img"></a>
+        </div>
+      </div>
+      <!-- Elements -->
+      <div class="elements">
+        <ul>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium">500</h3>
+            <p class="f-d-22 f-m-30">עמדות ציבוריות</p>
+          </li>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium">24/7</h3>
+            <p class="f-d-22 f-m-30">שירות איכותי</p>
+          </li>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium"><img class="lazy" data-src="img/home/benefits-1.png" alt="afconev-img"></h3>
+            <p class="f-d-22 f-m-30">מקבוצת שלמה</p>
+          </li>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium">100%</h3>
+            <p class="f-d-22 f-m-30">מקבוצת שלמה</p>
+          </li>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium">100</h3>
+            <p class="f-d-22 f-m-30">לקוחות עסקיים מהגדולים במשק</p>
+          </li>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium"><img class="lazy" data-src="img/global/tesla.png" alt="afconev-img"></h3>
+            <p class="f-d-22 f-m-30">הבחירה של טסלה בישראל</p>
+          </li>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium">10,500</h3>
+            <p class="f-d-22 f-m-30">נהגים מחוברים</p>
+          </li>
+          <li>
+            <h3 class="f-d-65 f-m-50 medium">10</h3>
+            <p class="f-d-22 f-m-30">שנות אחריות</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- FAQ -->
+  <div class="faq">
+    <div class="container">
+      <!-- Tabs -->
+      <div class="tabs">
+        <!-- Sidebar -->
+        <div class="sidebar">
+          <h1 class="f-d-50 f-m-70 medium">שאלות ותשובות</h1>
+          <div class="img">
+            <picture>
+              <source media="(min-width:1024px)" srcset="img/business-customers/car.jpg">
+              <img class="lazy" data-src="img/business-customers/car-mobile.jpg" alt="afconev-img">
+            </picture>
+          </div>
+        </div>
+        <!-- Main -->
+        <div class="main">
+          <!-- Tab Content -->
+          <div class="tab-content">
+            <ul>
+              <li class="tab-panel active" id="tab1">
+                <!-- Accordion -->
+                <div class="accordion">
+                  <!-- Collapsible -->
+                  <div class="collapsible show">
+                    <!-- Toggler -->
+                    <div class="collapse-toggler f-d-35 f-m-40">
+                      <div class="icon">
+                        <img class="lazy" data-src="img/icons/questionmark-circled.svg" alt="afconev-img">
+                      </div>
+                      <div class="text">
+                        ?תוך כמה זמן הרכב יגיע לטעינה מהירה
+                      </div>
+                      <div class="arrow">
+                        <img class="lazy" data-src="img/icons/chevron-down-black.svg" alt="afconev-img">
+                      </div>
+                    </div>
+                    <!-- Collapse -->
+                    <div class="collapse" style="height: auto;">
+                      <div>
+                        <p class="f-d-20 f-m-30"> מהירות הטעינה בעמדות הטעינה של אפקון תחבורה חשמלית משתנה בין גודל
+                          KW AC הסוללה לרכב, ליכולת ההטענה של הרכב ולמצב הסוללה. זמן טעינה בעמדת
+                          '- 50 נע בין 20ד KW DC 22 נע בין 45ד' לשעה לכל 100 ק"מ. זמן טעינה בעמדת
+                          .150 נע בין 5ד'- 10ד' לכל 100 ק"מ KW DC 25ד' לכל 100 ק"מ. זמן טעינה בעמדת</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Collapsible -->
+                  <div class="collapsible">
+                    <!-- Toggler -->
+                    <div class="collapse-toggler f-d-35 f-m-40">
+                      <div class="icon">
+                        <img class="lazy" data-src="img/icons/questionmark-circled.svg" alt="afconev-img">
+                      </div>
+                      <div class="text">
+                        ?תוך כמה זמן הרכב יגיע לטעינה מהירה
+                      </div>
+                      <div class="arrow">
+                        <img class="lazy" data-src="img/icons/chevron-down-black.svg" alt="afconev-img">
+                      </div>
+                    </div>
+                    <!-- Collapse -->
+                    <div class="collapse">
+                      <div>
+                        <p class="f-d-20 f-m-30"> מהירות הטעינה בעמדות הטעינה של אפקון תחבורה חשמלית משתנה בין גודל
+                          KW AC הסוללה לרכב, ליכולת ההטענה של הרכב ולמצב הסוללה. זמן טעינה בעמדת
+                          '- 50 נע בין 20ד KW DC 22 נע בין 45ד' לשעה לכל 100 ק"מ. זמן טעינה בעמדת
+                          .150 נע בין 5ד'- 10ד' לכל 100 ק"מ KW DC 25ד' לכל 100 ק"מ. זמן טעינה בעמדת</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Collapsible -->
+                  <div class="collapsible">
+                    <!-- Toggler -->
+                    <div class="collapse-toggler f-d-35 f-m-40">
+                      <div class="icon">
+                        <img class="lazy" data-src="img/icons/questionmark-circled.svg" alt="afconev-img">
+                      </div>
+                      <div class="text">
+                        ?תוך כמה זמן הרכב יגיע לטעינה מהירה
+                      </div>
+                      <div class="arrow">
+                        <img class="lazy" data-src="img/icons/chevron-down-black.svg" alt="afconev-img">
+                      </div>
+                    </div>
+                    <!-- Collapse -->
+                    <div class="collapse">
+                      <div>
+                        <p class="f-d-20 f-m-30"> מהירות הטעינה בעמדות הטעינה של אפקון תחבורה חשמלית משתנה בין גודל
+                          KW AC הסוללה לרכב, ליכולת ההטענה של הרכב ולמצב הסוללה. זמן טעינה בעמדת
+                          '- 50 נע בין 20ד KW DC 22 נע בין 45ד' לשעה לכל 100 ק"מ. זמן טעינה בעמדת
+                          .150 נע בין 5ד'- 10ד' לכל 100 ק"מ KW DC 25ד' לכל 100 ק"מ. זמן טעינה בעמדת</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Collapsible -->
+                  <div class="collapsible">
+                    <!-- Toggler -->
+                    <div class="collapse-toggler f-d-35 f-m-40">
+                      <div class="icon">
+                        <img class="lazy" data-src="img/icons/questionmark-circled.svg" alt="afconev-img">
+                      </div>
+                      <div class="text">
+                        ?תוך כמה זמן הרכב יגיע לטעינה מהירה
+                      </div>
+                      <div class="arrow">
+                        <img class="lazy" data-src="img/icons/chevron-down-black.svg" alt="afconev-img">
+                      </div>
+                    </div>
+                    <!-- Collapse -->
+                    <div class="collapse">
+                      <div>
+                        <p class="f-d-20 f-m-30"> מהירות הטעינה בעמדות הטעינה של אפקון תחבורה חשמלית משתנה בין גודל
+                          KW AC הסוללה לרכב, ליכולת ההטענה של הרכב ולמצב הסוללה. זמן טעינה בעמדת
+                          '- 50 נע בין 20ד KW DC 22 נע בין 45ד' לשעה לכל 100 ק"מ. זמן טעינה בעמדת
+                          .150 נע בין 5ד'- 10ד' לכל 100 ק"מ KW DC 25ד' לכל 100 ק"מ. זמן טעינה בעמדת</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="link-wrap">
+                  <a href="#" class="link f-d-22 f-m-30 medium">טען עוד <img class="lazy" data-src="img/icons/arrow-left.svg" alt="afconev-img"></a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Contact Form -->
   <div class="contact-form">
     <div class="container">
