--- a/business-customers.html
+++ b/business-customers.html
@@ -183,7 +183,7 @@
               אפקון מציעה פתרונות מגוונים לעסקים, עם ציוד
               <br> איכותי ומקצועי הרבה ניסיון וידע
             </p>
-            <a href="#" class="btn btn-primary"><span>לשיחה עם נציג</span></a>
+            <a href="#" class="btn btn-secondary"><span>לשיחה עם נציג</span></a>
           </div>
         </div>
       </div>
@@ -306,6 +306,71 @@
           </div>
         </div>
         <div class="swiper-pagination"></div>
+      </div>
+      <div class="text-center">
+        <a href="#" class="btn btn-secondary"><span>לשיחה עם נציג</span></a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Customers 2 -->
+  <div class="customers-2">
+    <div class="container">
+      <h2 class="f-d-50 f-m-50 medium">הלקוחות שלנו</h2>
+      <ul>
+        <li><img class="lazy" data-src="img/customer-logos/logo (1).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (2).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (3).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (4).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (5).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (6).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (7).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (8).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (9).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (10).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (11).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (12).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (13).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (14).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (15).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (16).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (17).png" alt="afconev-img"></li>
+        <li><img class="lazy" data-src="img/customer-logos/logo (18).png" alt="afconev-img"></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Post Slider -->
+  <div class="post-slider alt post-slider-2">
+    <div class="container">
+      <div class="heading">
+        <h2 class="f-d-50 f-m-70 medium">מגוון פתרונות לעסקים</h2>
+        <p class="f-d-22 f-m-30">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית קולורס מונפרד אדנדום</p>
+      </div>
+      <!-- Tabs -->
+      <div class="tabs">
+        <!-- Tab Navigation -->
+        <div class="tab-navigation">
+          <ul class="f-d-22 f-m-35 medium">
+            <li class="tab-btn active" data-tab="#tab1">
+              <a href="#">AAA</a>
+            </li>
+            <li class="tab-btn" data-tab="#tab2">
+              <a href="#">BBB</a>
+            </li>
+          </ul>
+        </div>
+        <!-- Tab Content -->
+        <div class="tab-content">
+          <ul>
+            <li class="tab-panel active" id="tab1">
+              AAA CONTENT
+            </li>
+            <li class="tab-panel" id="tab2">
+              BBB CONTENT
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="text-center">
         <a href="#" class="btn btn-secondary"><span>לשיחה עם נציג</span></a>
