--- a/business-customers.html
+++ b/business-customers.html
@@ -49,7 +49,7 @@
               <div class="collapsible">
                 <!-- Toggler -->
                 <div class="collapse-toggler">
-                  <a href="#" class="link link-white">פתרונות טעינה 
+                  <a href="#" class="link link-white">פתרונות טעינה
                     <img class="lazy icon-white" data-src="img/icons/chevron-down-white.svg" alt="afconev-img">
                     <img class="lazy icon-black" data-src="img/icons/chevron-down-black.svg" alt="afconev-img">
                   </a>
@@ -70,7 +70,7 @@
                         <div class="img">
                           <img src="img/global/menu-icon-2.jpg" alt="afconev-img">
                         </div>
-                        <p class="f-d-20 f-m-30">התקנה בבית 
+                        <p class="f-d-20 f-m-30">התקנה בבית
                           פרטי</p>
                       </div>
                       <!-- Icon -->
@@ -100,7 +100,8 @@
                     <div class="card">
                       <div class="text">
                         <h3 class="f-d-25 f-m-45 medium">פתרונות ללקוחות עסקיים</h3>
-                        <a href="#" class="link link-white f-d-20 f-m-30 medium">פרטים נוספים <img src="img/icons/arrow-left-white.svg" alt="afconev-img"></a>
+                        <a href="#" class="link link-white f-d-20 f-m-30 medium">פרטים נוספים <img
+                            src="img/icons/arrow-left-white.svg" alt="afconev-img"></a>
                       </div>
                       <div class="img">
                         <img src="img/global/menu-card-img.jpg" alt="afconev-img">
@@ -209,11 +210,13 @@
                 <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
                   טעינה אולטרה מהירות בישראל ומספקת עמדות
                   KW.מהירות בהספק של עד 350 DC טעינה</p>
-                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
                   <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
                     <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
-                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
-                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
                     </g>
                   </svg>
                 </a>
@@ -230,11 +233,13 @@
                 <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
                   טעינה אולטרה מהירות בישראל ומספקת עמדות
                   KW.מהירות בהספק של עד 350 DC טעינה</p>
-                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
                   <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
                     <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
-                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
-                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
                     </g>
                   </svg>
                 </a>
@@ -251,11 +256,13 @@
                 <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
                   טעינה אולטרה מהירות בישראל ומספקת עמדות
                   KW.מהירות בהספק של עד 350 DC טעינה</p>
-                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
                   <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
                     <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
-                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
-                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
                     </g>
                   </svg>
                 </a>
@@ -272,11 +279,13 @@
                 <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
                   טעינה אולטרה מהירות בישראל ומספקת עמדות
                   KW.מהירות בהספק של עד 350 DC טעינה</p>
-                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
                   <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
                     <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
-                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
-                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
                     </g>
                   </svg>
                 </a>
@@ -293,11 +302,13 @@
                 <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
                   טעינה אולטרה מהירות בישראל ומספקת עמדות
                   KW.מהירות בהספק של עד 350 DC טעינה</p>
-                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים 
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
                   <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
                     <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
-                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z" transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1"/>
-                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)" fill="none" stroke="#fff" stroke-width="1.8"/>
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
                     </g>
                   </svg>
                 </a>
@@ -340,11 +351,11 @@
     </div>
   </div>
 
-  <!-- Post Slider -->
-  <div class="post-slider alt post-slider-2">
+  <!-- Projects -->
+  <div class="projects">
     <div class="container">
       <div class="heading">
-        <h2 class="f-d-50 f-m-70 medium">מגוון פתרונות לעסקים</h2>
+        <h2 class="f-d-50 f-m-70 medium">פרויקטים מובילים</h2>
         <p class="f-d-22 f-m-30">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית קולורס מונפרד אדנדום</p>
       </div>
       <!-- Tabs -->
@@ -353,10 +364,22 @@
         <div class="tab-navigation">
           <ul class="f-d-22 f-m-35 medium">
             <li class="tab-btn active" data-tab="#tab1">
-              <a href="#">AAA</a>
+              <a href="#">הכל</a>
             </li>
             <li class="tab-btn" data-tab="#tab2">
-              <a href="#">BBB</a>
+              <a href="#">טעינה ציבורית</a>
+            </li>
+            <li class="tab-btn" data-tab="#tab3">
+              <a href="#">טעינה לחניונים</a>
+            </li>
+            <li class="tab-btn" data-tab="#tab4">
+              <a href="#">טעינה מהירות</a>
+            </li>
+            <li class="tab-btn" data-tab="#tab5">
+              <a href="#">משרדים</a>
+            </li>
+            <li class="tab-btn" data-tab="#tab6">
+              <a href="#">טעינה לאוטובוסים</a>
             </li>
           </ul>
         </div>
@@ -364,16 +387,98 @@
         <div class="tab-content">
           <ul>
             <li class="tab-panel active" id="tab1">
-              AAA CONTENT
+              <ul class="cards">
+                <!-- Card -->
+                <li>
+                  <div class="solutions-card">
+                    <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+                    <div class="text">
+                      <h3 class="f-d-45 f-m-50 medium"> עמדה אולטרה מהירה בצוקים 
+                        הראשונה בישראל</h3>
+                      <p class="f-d-22 f-m-30"> שיתוף פעולה עם חטיבת אאודי להקמת עמדה אולטרה מהירה
+                        בישוב צוקים אשר בערבה. הפרוייקט הוקם KW בהספק 150
+                        .בשיתוף דור אלון ובתחנת הדלק על הציר הראשי</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- Card -->
+                <li>
+                  <div class="solutions-card">
+                    <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+                    <div class="text">
+                      <h3 class="f-d-45 f-m-50 medium"> עמדה אולטרה מהירה בצוקים 
+                        הראשונה בישראל</h3>
+                      <p class="f-d-22 f-m-30"> שיתוף פעולה עם חטיבת אאודי להקמת עמדה אולטרה מהירה
+                        בישוב צוקים אשר בערבה. הפרוייקט הוקם KW בהספק 150
+                        .בשיתוף דור אלון ובתחנת הדלק על הציר הראשי</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- Card -->
+                <li>
+                  <div class="solutions-card">
+                    <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+                    <div class="text">
+                      <h3 class="f-d-45 f-m-50 medium"> עמדה אולטרה מהירה בצוקים 
+                        הראשונה בישראל</h3>
+                      <p class="f-d-22 f-m-30"> שיתוף פעולה עם חטיבת אאודי להקמת עמדה אולטרה מהירה
+                        בישוב צוקים אשר בערבה. הפרוייקט הוקם KW בהספק 150
+                        .בשיתוף דור אלון ובתחנת הדלק על הציר הראשי</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- Card -->
+                <li>
+                  <div class="solutions-card">
+                    <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+                    <div class="text">
+                      <h3 class="f-d-45 f-m-50 medium"> עמדה אולטרה מהירה בצוקים 
+                        הראשונה בישראל</h3>
+                      <p class="f-d-22 f-m-30"> שיתוף פעולה עם חטיבת אאודי להקמת עמדה אולטרה מהירה
+                        בישוב צוקים אשר בערבה. הפרוייקט הוקם KW בהספק 150
+                        .בשיתוף דור אלון ובתחנת הדלק על הציר הראשי</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- Card -->
+                <li>
+                  <div class="solutions-card">
+                    <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+                    <div class="text">
+                      <h3 class="f-d-45 f-m-50 medium"> עמדה אולטרה מהירה בצוקים 
+                        הראשונה בישראל</h3>
+                      <p class="f-d-22 f-m-30"> שיתוף פעולה עם חטיבת אאודי להקמת עמדה אולטרה מהירה
+                        בישוב צוקים אשר בערבה. הפרוייקט הוקם KW בהספק 150
+                        .בשיתוף דור אלון ובתחנת הדלק על הציר הראשי</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- Card -->
+                <li>
+                  <div class="solutions-card">
+                    <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+                    <div class="text">
+                      <h3 class="f-d-45 f-m-50 medium"> עמדה אולטרה מהירה בצוקים 
+                        הראשונה בישראל</h3>
+                      <p class="f-d-22 f-m-30"> שיתוף פעולה עם חטיבת אאודי להקמת עמדה אולטרה מהירה
+                        בישוב צוקים אשר בערבה. הפרוייקט הוקם KW בהספק 150
+                        .בשיתוף דור אלון ובתחנת הדלק על הציר הראשי</p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+              <div class="text-center">
+                <a href="#" class="link f-d-22 f-m-30 medium">לכל הלקוחות <img class="lazy"
+                  data-src="img/icons/arrow-left.svg" alt="afconev-img"></a>
+              </div>
             </li>
-            <li class="tab-panel" id="tab2">
-              BBB CONTENT
-            </li>
+            <li class="tab-panel" id="tab2"></li>
+            <li class="tab-panel" id="tab3"></li>
+            <li class="tab-panel" id="tab4"></li>
+            <li class="tab-panel" id="tab5"></li>
+            <li class="tab-panel" id="tab6"></li>
           </ul>
         </div>
-      </div>
-      <div class="text-center">
-        <a href="#" class="btn btn-secondary"><span>לשיחה עם נציג</span></a>
       </div>
     </div>
   </div>
@@ -385,24 +490,25 @@
       <div class="circle pulse-animation">
         <div class="text">
           <h2 class="f-d-60 f-m-50 medium">לקוחות מרכזיים</h2>
-          <p class="f-d-22 f-m-30 d-desktop">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית נולום ארווס סאפיאן קוויס, אקווזמן קוואזי במר</p>
+          <p class="f-d-22 f-m-30 d-desktop">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית נולום ארווס סאפיאן
+            קוויס, אקווזמן קוואזי במר</p>
           <p class="f-d-22 f-m-30 d-mobile">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג . </p>
-          <a href="#" class="link f-d-22 f-m-30 medium">לכל הלקוחות <img class="lazy" data-src="img/icons/arrow-left.svg" alt="afconev-img"></a>
         </div>
       </div>
       <!-- Elements -->
       <div class="elements">
         <ul>
           <li>
-            <h3 class="f-d-65 f-m-50 medium">500</h3>
-            <p class="f-d-22 f-m-30">עמדות ציבוריות</p>
+            <h3 class="f-d-65 f-m-50 medium">יציבות</h3>
+            <p class="f-d-22 f-m-30">חברה גדולה ויציבה</p>
           </li>
           <li>
             <h3 class="f-d-65 f-m-50 medium">24/7</h3>
             <p class="f-d-22 f-m-30">שירות איכותי</p>
           </li>
           <li>
-            <h3 class="f-d-65 f-m-50 medium"><img class="lazy" data-src="img/home/benefits-1.png" alt="afconev-img"></h3>
+            <h3 class="f-d-65 f-m-50 medium"><img class="lazy" data-src="img/home/benefits-1.png" alt="afconev-img">
+            </h3>
             <p class="f-d-22 f-m-30">מקבוצת שלמה</p>
           </li>
           <li>
@@ -551,7 +657,8 @@
                   </div>
                 </div>
                 <div class="link-wrap">
-                  <a href="#" class="link f-d-22 f-m-30 medium">טען עוד <img class="lazy" data-src="img/icons/arrow-left.svg" alt="afconev-img"></a>
+                  <a href="#" class="link f-d-22 f-m-30 medium">טען עוד <img class="lazy"
+                      data-src="img/icons/arrow-left.svg" alt="afconev-img"></a>
                 </div>
               </li>
             </ul>
