--- a/faq.html
+++ b/faq.html
@@ -28,8 +28,8 @@
       <!-- Logo -->
       <div class="header-logo">
         <a href="#">
-          <img class="lazy icon-white" data-src="img/global/logo-alt.png" alt="afconev-img">
-          <img class="lazy icon-black" data-src="img/global/logo-alt-black.png" alt="afconev-img">
+          <img class="lazy icon-white" data-src="img/global/logo-alt-2.png" alt="afconev-img">
+          <img class="lazy icon-black" data-src="img/global/logo-alt-col.png" alt="afconev-img">
         </a>
       </div>
       <!-- Links -->
@@ -60,52 +60,64 @@
                     <div class="icons">
                       <!-- Icon -->
                       <div class="icon">
-                        <div class="img">
-                          <img src="img/global/menu-icon-1.jpg" alt="afconev-img">
-                        </div>
-                        <p class="f-d-20 f-m-30">טסלה</p>
+                        <a href="#">
+                          <div class="img">
+                            <img src="img/global/menu-icon-1.jpg" alt="afconev-img">
+                          </div>
+                          <p class="f-d-20 f-m-30">טסלה</p>
+                        </a>
                       </div>
                       <!-- Icon -->
                       <div class="icon">
-                        <div class="img">
-                          <img src="img/global/menu-icon-2.jpg" alt="afconev-img">
-                        </div>
-                        <p class="f-d-20 f-m-30">התקנה בבית
-                          פרטי</p>
+                        <a href="#">
+                          <div class="img">
+                            <img src="img/global/menu-icon-2.jpg" alt="afconev-img">
+                          </div>
+                          <p class="f-d-20 f-m-30">התקנה בבית
+                            פרטי</p>
+                        </a>
                       </div>
                       <!-- Icon -->
                       <div class="icon">
-                        <div class="img">
-                          <img src="img/global/menu-icon-3.jpg" alt="afconev-img">
-                        </div>
-                        <p class="f-d-20 f-m-30">התקנה בבניין
-                          משותף</p>
+                        <a href="#">
+                          <div class="img">
+                            <img src="img/global/menu-icon-3.jpg" alt="afconev-img">
+                          </div>
+                          <p class="f-d-20 f-m-30">התקנה בבניין
+                            משותף</p>
+                        </a>
                       </div>
                       <!-- Icon -->
                       <div class="icon">
-                        <div class="img">
-                          <img src="img/global/menu-icon-4.jpg" alt="afconev-img">
-                        </div>
-                        <p class="f-d-20 f-m-30">מטענים</p>
+                        <a href="#">
+                          <div class="img">
+                            <img src="img/global/menu-icon-4.jpg" alt="afconev-img">
+                          </div>
+                          <p class="f-d-20 f-m-30">מטענים</p>
+                        </a>
                       </div>
                       <!-- Icon -->
                       <div class="icon">
-                        <div class="img">
-                          <img src="img/global/menu-icon-5.jpg" alt="afconev-img">
-                        </div>
-                        <p class="f-d-20 f-m-30">אביזרים</p>
+                        <a href="#">
+                          <div class="img">
+                            <img src="img/global/menu-icon-5.jpg" alt="afconev-img">
+                          </div>
+                          <p class="f-d-20 f-m-30">אביזרים</p>
+                        </a>
                       </div>
                     </div>
                     <!-- Card -->
                     <div class="card">
-                      <div class="text">
-                        <h3 class="f-d-25 f-m-45 medium">פתרונות ללקוחות עסקיים</h3>
-                        <a href="#" class="link link-white f-d-20 f-m-30 medium">פרטים נוספים <img
-                            src="img/icons/arrow-left-white.svg" alt="afconev-img"></a>
-                      </div>
-                      <div class="img">
-                        <img src="img/global/menu-card-img.jpg" alt="afconev-img">
-                      </div>
+                      <a href="#">
+                        <div class="text">
+                          <h3 class="f-d-25 f-m-45 medium">פתרונות ללקוחות עסקיים</h3>
+                          <a href="#" class="link link-white f-d-20 f-m-30 medium">פרטים נוספים <img
+                              src="img/icons/arrow-left-white.svg" alt="afconev-img"></a>
+                        </div>
+                        <div class="img">
+                          <img src="img/global/menu-card-img.jpg" alt="afconev-img">
+                        </div>
+                      </a>
                     </div>
                   </div>
                 </div>
