[IMP] - Business Customers Page Upage

--- a/business-customers.html
+++ b/business-customers.html
@@ -577,6 +577,139 @@
     </div>
   </div>
 
+  <!-- Post Slider -->
+  <div class="post-slider post-slider-2">
+    <div class="container">
+      <div class="heading">
+        <h2 class="f-d-50 f-m-70 medium">מאגר הידע</h2>
+        <p class="f-d-22 f-m-30">לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית קולורס מונפרד אדנדום</p>
+      </div>
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-32 f-m-40">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-32 f-m-40">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-32 f-m-40">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-32 f-m-40">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="solutions-card">
+              <div class="img"><img class="lazy" data-src="img/home/solutions-img-1.jpg" alt="afconev-img"></div>
+              <div class="text">
+                <h3 class="f-d-32 f-m-40">עמדות טעינה
+                  מהירות</h3>
+                <p class="f-d-22 f-m-30"> אפקון הראשונה לתכנן, להקים ולהפעיל עמדות
+                  טעינה אולטרה מהירות בישראל ומספקת עמדות
+                  KW.מהירות בהספק של עד 350 DC טעינה</p>
+                <a href="#" class="link f-d-22 f-m-30 medium">פרטים נוספים
+                  <svg xmlns="http://www.w3.org/2000/svg" width="19.541" height="10.52" viewBox="0 0 19.541 10.52">
+                    <g id="Group_10" data-name="Group 10" transform="translate(-1655.376 -2825.74)">
+                      <path id="Path_8" data-name="Path 8" d="M4.553,9.106,0,4.553,4.553,0,5,.443.886,4.553,5,8.663Z"
+                        transform="translate(1656.083 2826.447)" fill="#fff" stroke="#fff" stroke-width="1" />
+                      <line id="Line_1" data-name="Line 1" x2="17.833" transform="translate(1657.083 2831.095)"
+                        fill="none" stroke="#fff" stroke-width="1.8" />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+      <div class="text-center">
+        <a href="#" class="btn btn-secondary"><span>למאגר מלא</span></a>
+      </div>
+    </div>
+  </div>
+
   <!-- FAQ -->
   <div class="faq">
     <div class="container">
